--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<link rel="prefetch" href="https://www.likens.dev/">
 		<link rel="prerender" href="https://likens.dev/">
 		<link rel="icon" sizes="192x192" href="./assets/img/icon.png">
-		<link rel="apple-touch-icon" href="./assets/img/icon.png"></head>
+		<link rel="apple-touch-icon" href="./assets/img/icon.png">
 	</head>
 	<body>
 		<div class="master">
